--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -31,8 +31,9 @@
     cursor: pointer;
 }
 
-#text{
+.text{
     text-align: center;
-    font-size: 20pt;
+    font-size: 50pt;
     margin-top: 50px;
+    color: red;
 }
